# dfajit

./: BACKLOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: debug.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_compile.rs  fuzz_scan.rs  fuzz_transition_table.rs
src/: codegen.rs  dfa.rs  error.rs  lib.rs  tests_advanced.rs  tests_core.rs
src/codegen/: buffer.rs  compile.rs  mod.rs
src/table/: analysis.rs  minimize.rs  mod.rs  serialize.rs
tests/: campaign_s_perf_match.rs
tests/adversarial/: adversarial_jit.rs  break_it.rs  buffer_overflow.rs  dfa_generation.rs  massive.rs  memory.rs  mod.rs  parsing.rs  platform_edge_cases.rs  test_depth_adversarial.rs  test_depth_faultkit.rs  test_legendary_adversarial.rs  test_legendary_faultkit.rs  unicode.rs
tests/break_it/: targeted_regressions.rs
tests/concurrent/: stress.rs
tests/impossible/: conditions.rs
tests/integration/: compile_scan.rs  error_handling.rs
tests/property/: api_props.rs  more_props.proptest-regressions  more_props.rs
tests/regression/: bug_test.rs
tests/unit/: api.rs  dfa_test.rs  table_test.rs
