[workspace]
members = ["."]

[package]
name = "dfajit"
version = "0.1.1"
edition = "2021"
rust-version = "1.85"
license = "MIT"
authors = ["Corum Collective LLC <contact@santh.io>"]
repository = "https://github.com/santhsecurity/Santh"
homepage = "https://github.com/santhsecurity/Santh/tree/main/libs/performance/matching/dfajit"
documentation = "https://docs.rs/dfajit"
description = "JIT compilation of DFA transition tables to native x86_64 jump tables"
readme = false
keywords = ["dfa", "jit", "regex", "pattern-matching", "performance"]
categories = ["algorithms", "text-processing"]

[dependencies]
aho-corasick = { version = "1", optional = true }
matchkit = { version = "0.1",  path = "../../matching/matchkit"  }
thiserror = "2"
libc = "0.2"
regex-automata = { version = "0.4", optional = true }

[features]
default = []
aho-corasick = ["dep:aho-corasick"]
regex = ["dep:regex-automata"]

[dev-dependencies]
criterion = "0.5"
faultkit = { version = "0.1", path = "../../testing/faultkit" }
proptest = "1"
rand = "0.10.0"
rusty-fork = "0.3.1"

[[bench]]
name = "jit_bench"
harness = false

[[test]]
name = "overflow"
path = "tests/adversarial/overflow.rs"

[[test]]
name = "malformed"
path = "tests/adversarial/malformed.rs"

[[test]]
name = "jit_safety"
path = "tests/adversarial/jit_safety.rs"

[[test]]
name = "buffer_overflow"
path = "tests/adversarial/buffer_overflow.rs"

[[test]]
name = "platform_edge_cases"
path = "tests/adversarial/platform_edge_cases.rs"

[[test]]
name = "threads"
path = "tests/concurrent/threads.rs"

[[test]]
name = "invariants"
path = "tests/property/invariants.rs"

[[test]]
name = "workflow"
path = "tests/integration/workflow.rs"


[[test]]
name = "regression"
path = "tests/regression/bug_test.rs"
[[test]]
name = "impossible"
path = "tests/impossible/conditions.rs"

[[test]]
name = "unit"
path = "tests/unit/mod.rs"

[[test]]
name = "adversarial_adversarial_jit"
path = "tests/adversarial/adversarial_jit.rs"

[[test]]
name = "adversarial_break_it"
path = "tests/adversarial/break_it.rs"

[[test]]
name = "adversarial_dfa_generation"
path = "tests/adversarial/dfa_generation.rs"

[[test]]
name = "adversarial_massive"
path = "tests/adversarial/massive.rs"

[[test]]
name = "adversarial_memory"
path = "tests/adversarial/memory.rs"

[[test]]
name = "adversarial"
path = "tests/adversarial/mod.rs"

[[test]]
name = "adversarial_parsing"
path = "tests/adversarial/parsing.rs"

[[test]]
name = "adversarial_test_legendary_adversarial"
path = "tests/adversarial/test_legendary_adversarial.rs"

[[test]]
name = "adversarial_test_legendary_faultkit"
path = "tests/adversarial/test_legendary_faultkit.rs"

[[test]]
name = "adversarial_unicode"
path = "tests/adversarial/unicode.rs"

[[test]]
name = "integration_compile_scan"
path = "tests/integration/compile_scan.rs"

[[test]]
name = "integration_error_handling"
path = "tests/integration/error_handling.rs"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"

[[test]]
name = "property_api_props"
path = "tests/property/api_props.rs"

[[test]]
name = "property"
path = "tests/property/mod.rs"

[[test]]
name = "property_more_props"
path = "tests/property/more_props.rs"

[[test]]
name = "property_proptest_parity"
path = "tests/property/proptest_parity.rs"

